--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,142 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.app{
+  background-image: url('./Assests/weather.jpg');
+  background-size: cover;
+  background-position: bottom;
+  transition: 0.4 ease-out;
+}
+
+.sunny{
+  background-image: url('./Assests/sunny.jpeg');
+}
+
+.night{
+  background-image: url('./Assests/night.jpg');
+}
+
+.coldDay{
+  background-image: url('./Assests/coldday.jpg');
+}
+
+.coldNight{
+  background-image: url('./Assests/coldnight.jpg');
+}
+
+.app .rainy{
+  background-image: url('./Assests/rainy.jpg');
+}
+
+.app .cloudDay{
+  background-image: url('./Assests/cloudy.jpg');
+}
+
+.app .cloudNight{
+  background-image: url('./Assests/nightcloudy.jpg');
+}
+
+main{
+  min-height: 100vh;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.75));
+  padding: 25px;
+}
+
+.search-box{
+  width: 100%;
+  margin: 0 0 75px;
+}
+
+.search-box .search-bar{
+  display: block;
+  width: 100%;
+  padding: 15px;
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 0px 0px 16px 16px;
+  /* margin-top: -25px; */
+  box-shadow: 0px 5px rgba(0,0,0,0.2);
+  color: #313131;
+  font-size: 20px;
+  transition: 0.4s ease;
+}
+
+.search-box .search-bar:focus{
+  background-color: rgba(255,255,255,0.75);
+}
+
+.location-box .location{
+  color: #fff;
+  font-size: 32px;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 3px 3px rgba(50,50,70,0.5);
+}
+
+.location-box .date{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  text-shadow: 2px 2px rgba(50,50,70,0.5);
+}
+
+.weather-box .temp{
+  position: relative;
+  /* display: inline-block; */
+  margin: 30px auto !important;
+  /* background-color: rgba(255, 255, 255, 0.6); */
+  border-radius: 16px;
+  padding: 15px 25px;
+  color: #fff;
+  font-size: 102px;
+  font-weight: 900;
+  text-shadow: 3px 6px rgba(50,50,70,0.5);
+  text-align: center !important;
+  /* box-shadow: 3px 6px rgba(0,0,0,0.2); */
+  /* margin-left: 42vw; */
+  justify-content: center;
+  backdrop-filter: blur(40px);
+}
+
+.weather-box .weather{
+  color: #fff;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50,50,70,0.5);
+  text-align: center;
+}
+
+.time-box .time{
+  margin-top: 30px;
+  color: #fff;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50,50,70,0.5);
+  text-align: center;
+  /* background-color: rgba(255, 255, 255, 0.6); */
+  backdrop-filter: blur(40px);
+  border-radius: 16px;
+  /* display: inline-block; */
+}
+
+.time-box .zone{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  text-shadow: 2px 2px rgba(50,50,70,0.5);
 }
