--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ main{
   /* box-shadow: 3px 6px rgba(0,0,0,0.2); */
   /* margin-left: 42vw; */
   justify-content: center;
-  backdrop-filter: blur(40px);
+  /* backdrop-filter: blur(40px); */
 }
 
 .weather-box .weather{
@@ -142,7 +142,7 @@ main{
   text-shadow: 3px 3px rgba(50,50,70,0.5);
   text-align: center;
   /* background-color: rgba(255, 255, 255, 0.6); */
-  backdrop-filter: blur(40px);
+  /* backdrop-filter: blur(40px); */
   border-radius: 16px;
   /* display: inline-block; */
 }
@@ -154,4 +154,10 @@ main{
   font-style: italic;
   text-align: center;
   text-shadow: 2px 2px rgba(50,50,70,0.5);
+}
+
+.backLink{
+  text-align: center;
+  font-size: xx-small;
+  color: #fff;
 }
